# tbai_mujoco_descriptions

./: .gitignore  .gitmodules  README.md  pyproject.toml  sit_stand.py  view_robot.py  visualize_mjcf.py
robots/anymal_b/: anymal_b.xml  config.yaml  scene.xml
robots/anymal_c/: anymal_c.xml  config.yaml  scene.xml
robots/anymal_d/: anymal_d.xml  config.yaml  scene.xml
robots/anymal_d/assets/: base.mtl  battery.mtl  bottom_shell.mtl  docking_socket.mtl  drive.mtl  face_shell.mtl  foot.mtl  hatch.mtl  hip.mtl  lidar.mtl  lidar_guard.mtl  shank_l.mtl  shank_r.mtl  thigh.mtl  top_shell.mtl
robots/franka_panda/: config.yaml  franka.xml  scene.xml
robots/g1/: config.yaml  g1_29dof.xml
robots/go2/: config.yaml  go2.xml  scene.xml
robots/go2w/: config.yaml  go2w.xml
robots/spot/: config.yaml  scene.xml  spot.xml
robots/spot_arm/: config.yaml  scene.xml  spot_arm.xml
tbai_mujoco_descriptions/: __init__.py  print_config_path.py  print_mjcf_path.py  print_scene_path.py
worlds/: normal.xml  office.xml
